--- a/style/style.css
+++ b/style/style.css
@@ -1,40 +1,360 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Quicksand:wght@300;700&display=swap');
-
-body{
-  font-family: "Comic Neue", sans-serif;
-background-image: url('data:image/svg+xml,%3Csvg width="100" height="20" viewBox="0 0 100 20" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z" fill="%239C92AC" fill-opacity="0.4" fill-rule="evenodd"/%3E%3C/svg%3E');
+#parallax-hero {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(3, 3, 3, 0)
+    ),
+    url("/imgofme/lava.jpg");
+  min-height: 100vh;
+  background-position: top;
+  background-size: auto;
+}
+@media screen and (min-width: 500px) {
+  #parallax-hero {
+    background-size: cover;
+  }
 }
 
-h3, label, p {
-  background-color: #FFF;
+/* Style header */
+@keyframes colorFadeIn {
+  from {
+    background-color: transparent;
+  }
+  to {
+    background-color: var(--theme-bg-color);
+  }
+}
+@keyframes colorFadeOut {
+  from {
+    background-color: var(--theme-bg-color);
+  }
+  to {
+    background-color: transparent;
+  }
 }
 
-h3 {
-  color:red;
-  font-family: "Quicksand:wght@300", sans-serif;
+header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
-label {
-  font-family: "Quicksand", sans-serif;
+#menu {
+  padding: 1.7rem;
+  display: flex;
+  justify-content: space-between;
+}
+#menu p {
+  text-align: center;
+  font-size: 1.4rem;
+  color: #fff;
+  font-weight: bold;
 }
 
-.card{
-  
-  margin-top: 1rem;
+#burger-menu {
+  color: #fff;
+  font-size: 1.4rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
-.draggable {
-   width: 80px; 
-   height: 80px; 
-   padding: 0.75em; 
-   float: left; 
-   margin: 0 10px 10px 0; 
+
+/* Style dropdown-menu */
+#dropdown-menu {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  text-align: center;
+  flex-direction: column;
+  background-color: var(--theme-bg-color);
+  align-items: center;
+  justify-content: space-between;
+}
+
+#nav-container {
+  display: none;
+}
+
+@media screen and (min-width: 500px) {
+  #burger-menu,
+  #dropdown-menu {
+    display: none !important;
   }
 
-#dogeHouse {
-   width: 95%; 
-   height:300px; 
-   border:10px solid #0f0300; 
-   padding: 10px; 
-  background-color: #c10202;
-
+  #nav-container {
+    display: flex;
   }
+}
+
+/* Style hero-section */
+#hero-section {
+  text-align: center;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 500px) {
+  #hero-section {
+    min-height: 70vh;
+  }
+}
+
+#hero-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff;
+  margin: 0.5rem;
+}
+@media screen and (min-width: 500px) {
+  #hero-title {
+    font-size: 6rem;
+  }
+}
+
+#read-more {
+  margin: 1rem;
+  padding: 0.7rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+#read-more span {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/* Style introduction */
+#introduction {
+  text-align: center;
+}
+#introduction img {
+  border-radius: 100%;
+  margin: 0.7rem auto;
+  width: 12rem;
+}
+@media screen and (min-width: 500px) {
+  #introduction {
+    padding: 3.5rem 0;
+  }
+  #introduction img {
+    width: 19rem;
+  }
+}
+
+#introduction-img-container {
+  margin: auto;
+  border-bottom: 3px solid #777777;
+}
+@media screen and (min-width: 500px) and (orientation: landscape) {
+  #introduction-img-container {
+    border: none;
+  }
+}
+
+#introduction-description-container {
+  max-width: 850px;
+  margin: auto;
+}
+
+#introduction-description {
+  font-style: italic;
+  text-align: left;
+}
+@media screen and (min-width: 500px) {
+  #introduction-description {
+    margin-left: 5rem;
+    line-height: 3rem;
+  }
+}
+
+/* Style skills */
+#parallax-skills {
+  background-image: url("/imgofme/codepic.jpg");
+  min-height: 30vh;
+}
+
+.skills-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.9rem;
+}
+
+.skill-icons {
+  font-size: 3.5rem;
+}
+
+.project-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.project-cards {
+  box-shadow: 0px -5px 23px 0px rgba(0, 0, 0, 0.35);
+  border: 3px solid #000;
+  border-radius: 12px;
+  background-color: #fdfdfd;
+  margin: 1rem 2rem;
+}
+.project-cards-title {
+  text-align: center;
+  font-weight: bold;
+}
+.project-cards p,
+.project-cards a {
+  color: #000;
+}
+
+/* Style other stuff */
+#parallax-other-stuff {
+  background-image: url("/imgofme/unalionpic.jpg");
+  min-height: 30vh;
+}
+
+.other-stuff-card {
+  width: 12rem;
+  height: 18rem;
+  text-align: center;
+  cursor: pointer;
+  margin: 1.2rem 1.5rem;
+  perspective: 500px;
+  -webkit-perspective: 500px;
+}
+@media screen and (min-width: 500px) {
+  .other-stuff-card {
+    width: 16rem;
+  }
+}
+.other-stuff-card .paragraph {
+  padding: 1rem;
+}
+.other-stuff-card .paragraph:last-child {
+  font-weight: bold;
+}
+
+.other-stuff-card .card-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+}
+.card-flip {
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+}
+.other-stuff-card .card-front,
+.other-stuff-card .card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  border: 3px solid #000;
+  border-radius: 12px;
+  background-color: #c0e3ff;
+  box-shadow: 0px -5px 23px 0px rgba(0, 0, 0, 0.35);
+}
+.other-stuff-card .card-back {
+  background-color: #fdfdfd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+}
+
+@keyframes spinQuestionMark {
+  from {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
+  }
+}
+.question-mark {
+  font-size: 9rem;
+  margin: 0.5rem auto;
+}
+@media screen and (min-width: 500px) {
+  .question-mark {
+    animation: spinQuestionMark 1s infinite linear;
+    -webkit-animation: spinQuestionMark 1s infinite linear;
+  }
+}
+
+/* Style footer  */
+footer {
+  background-color: var(--theme-bg-color);
+  color: #f6f6f6;
+  padding: 1.5rem 1.5rem 0;
+}
+
+#footer-brand {
+  text-align: left;
+  padding: 1rem;
+}
+@media screen and (min-width: 500px) {
+  #footer-brand {
+    padding: 0;
+  }
+
+  #footer-flex {
+    padding: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: flex-start;
+  }
+}
+
+.footer-container {
+  margin: 2rem 1rem 1rem 1rem;
+}
+@media screen and (min-width: 500px) {
+  .footer-container {
+    margin: 0;
+  }
+}
+
+.footer-title {
+  font-size: 1.2rem;
+  margin: auto auto 0.7rem auto;
+  font-weight: bold;
+}
+
+.social-icons {
+  font-size: 1rem;
+  border-radius: 100%;
+  border: 2px solid #f6f6f6;
+  padding: 0.6rem;
+  margin: 0 1rem 0 0;
+  transition: all 0.4s ease 0s;
+}
+.social-icons:hover {
+  background-color: #fff;
+}
+i:hover {
+  color: var(--theme-bg-color);
+}
+@media screen and (min-width: 500px) {
+  .social-icons-container {
+    margin: 1.5rem 1.5rem 0;
+  }
+}
+
+#copyright {
+  font-size: 0.9rem;
+  padding: 2rem 1rem 0.5rem;
+}
+@media screen and (min-width: 500px) {
+  #copyright {
+    padding: 3rem 1.5rem 0.5rem 1.5rem;
+  }
+}
